working in responsiveness, just need to fix whitespace in mobile view

--- a/src/App.css
+++ b/src/App.css
@@ -6,9 +6,12 @@
   color: #fff;
   /* border: 1px solid black; */
 }
+body {
+  background-color: #a3c4f3;
+}
 .background {
   background-color: #a3c4f3;
-  height: 100vh;
+  max-height: 100vh;
 }
 .header {
   display: flex;
@@ -18,14 +21,17 @@
 .header p:first-child {
   font-size: 1.2rem;
   font-weight: 700;
+  color: #a584da;
 }
 .heroplants {
-  height: 80%;
-  width: 40%;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 .heroplants svg {
-  margin-top: 15rem;
-  margin-left: 4em;
+  width: 80%;
 }
 .registerContainer {
   display: flex;
@@ -34,7 +40,46 @@
 }
 .register-wrapper {
   width: 25%;
-  margin: 14em auto;
+  margin: 10em auto;
+}
+
+@media (max-width: 1060px) {
+  .registerContainer {
+    display: flex;
+    flex-direction: column;
+  }
+
+  .heroplants {
+    margin-top: 4em;
+    max-width: 100%;
+  }
+  .register-wrapper {
+    width: 60%;
+    margin-top: 6em;
+  }
+}
+@media (max-width: 450px) {
+  .heroplants {
+    margin-top: 0;
+  }
+  .register-wrapper {
+    width: 80%;
+  }
+}
+@media (max-width: 400px) {
+  .header {
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+  }
+  .header p:first-child {
+    margin-bottom: 0.5em;
+  }
+}
+.register-wrapper h2 {
+  font-weight: 400;
+  line-height: 40px;
+  margin-bottom: 1em;
 }
 input {
   color: black;
